examples/test/testpolicy14350.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14350
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key6: value46
      key33: value14
      key36: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value39
          key48: value38
      podSelector:
        matchLabels:
          key16: value40
          key23: value43
          key47: value19
